change table to div, replace percents to EM

--- a/css/about_main.css
+++ b/css/about_main.css
@@ -13,8 +13,8 @@ and open the template in the editor.
 	display:table;
 	background-image: url(images/gray_corner.png);
 	background-size: 100% 100%;
-	padding-top: 2%;
-	padding-bottom: 5%;
+	padding-top: 2em;
+	padding-bottom: 3.5em;
 }
 .about-main .corner-image {
 	position: absolute;
@@ -24,7 +24,7 @@ and open the template in the editor.
 .about-main .our-about-text {
 	display: table-cell;
 	width: 50%;
-	padding: 0% 5% 0% 10%;
+	padding: 0% 3em 0% 7em;
 }
 .about-main .out-about-images {
 	display: table-cell;
@@ -35,8 +35,8 @@ and open the template in the editor.
 	position: absolute;
 	width: auto;
 	height: 80%;
-	right: 40%;
-	bottom: 5%;
+	right: 14em;
+	bottom: 0.7em;
 	-ms-transform: rotate(-16deg); /* IE 9 */
     -webkit-transform: rotate(-16deg); /* Chrome, Safari, Opera */
     transform: rotate(-16deg);
@@ -47,8 +47,8 @@ and open the template in the editor.
 	position: absolute;
 	width: auto;
 	height: 80%;
-	right: 25%;
-	bottom: 5%;
+	right: 8em;
+	bottom: 1em;
 	-ms-transform: rotate(15deg); /* IE 9 */
     -webkit-transform: rotate(15deg); /* Chrome, Safari, Opera */
     transform: rotate(15deg);
@@ -58,8 +58,8 @@ and open the template in the editor.
 .about-main .corner-image {
 	position: absolute;
 	right: 0;
-	bottom: 10%;
-	width: 10%;
+	bottom: 2em;
+	width: 6em;
 	height: auto;
 }
 .about-main .about-header {
@@ -68,45 +68,45 @@ and open the template in the editor.
 	font-size: 1.8em;
 }
 .about-main .our-about-text .solid-lines {
-	width: 16%;
+	width: 4em;
 	padding-top: 0.1em;
 	border-top: medium solid #585757;
 	border-bottom: thick solid #585757;
 }
 .about-main .about-description {
-	padding-top: 5%;
-	padding-bottom: 5%;
+	padding-top: 2em;
+	padding-bottom: 2em;
 	font-size: 0.7em;
 }
 .about-main .our-team {
-	padding: 2% 10% 2% 10%;
+	padding: 2em 7em 2em 7em;
 	letter-spacing: 0.07em;
 	
 }
 .about-main .our-team .solid-lines {
-	width: 7%;
+	width: 4em;
 	padding-top: 0.12em;
 	border-top: medium solid #585757;
 	border-bottom: thick solid #585757;
 }
 .about-main .our-team .contact-button {
-	width: 13%;
+	width: 1.3em;
 	height: auto;
 	cursor: pointer;
 }
 .about-main .our-team .cook-persons {
 	text-align: center;
-	margin-top: 2.5%;
+	margin-top: 2em;
 }
 .about-main .our-team .cook-person {
-	width: 20%;
+	width: 10em;
 	display: inline-block;
 	-webkit-border-radius: 2em; /*For Safari, etc.*/
     -moz-border-radius: 2em; /*For Mozilla, etc.*/
     border-radius: 2em; /*CSS3 Feature*/
 	border: 0.1em solid transparent;
-	margin-left: 2%;
-	margin-right: 2%;
+	margin-left: 1em;
+	margin-right: 1em;
 }
 .about-main .our-team .cook-person:hover {
 	border: 0.1em solid #fcc828;
@@ -132,21 +132,21 @@ and open the template in the editor.
 .about-main .our-team .cooker-name {
 	font-family: SatisfyRegular;
 	color: #1d1d1d;
-	padding-top: 5%;
-	padding-bottom: 2%;
+	padding-top: 0.5em;
+	padding-bottom: 0.1em;
 }
 .about-main .our-team .cooker-description {
 	font-family: LatoLight;
 	color: #c6c6c6;
 	font-size: 0.6em;
-	padding-top: 1%;
-	padding-bottom: 4%;
+	padding-top: 0.2em;
+	padding-bottom: 0.5em;
 }
 
 .about-main .our-team .cook-person .separator2 {
 	border-top: 0.15em solid #85888d;
-	margin-left: 5%;
-	margin-right: 5%;
+	margin-left: 0.5em;
+	margin-right: 0.5em;
 }
 
 .about-main .our-team .cooker-intro {
@@ -160,11 +160,11 @@ and open the template in the editor.
 
 .about-main .cook-person .cooker-intro {
 	text-align: center;
-	padding: 2% 2% 0 2%;
+	padding: 0.4em 0.4em 0 0.4em;
 }
 
 .about-main .cook-person .cooker-cap-icon {
-	width: 13%;
+	width: 1.5em;
 	height: auto;
 }
 
