--- a/css/header.css
+++ b/css/header.css
@@ -14,7 +14,11 @@ and open the template in the editor.
 	background-size: cover;
 	background-position: center center;
 	position: relative;
-	
+	height: 20.5em;
+}
+
+.header.header2 {
+	height: 10em;
 }
 
 .header.header2 {
@@ -32,8 +36,8 @@ and open the template in the editor.
 .header .box {
 	position: absolute;
 	top: 0;
-	left: 10%;
-	right: 10%;
+	left: 7em;
+	right: 7em;
 	bottom: 0;
 	overflow: hidden;
 }
@@ -56,7 +60,7 @@ and open the template in the editor.
 	display: table-cell;
 	vertical-align: middle;
 	font-size: 2.5em;
-	padding-top: 1%;
+	padding-top: 0.3em;
 	color: white;
 	-webkit-user-select: none; /* Chrome/Safari */        
 	-moz-user-select: none; /* Firefox */
@@ -99,7 +103,7 @@ and open the template in the editor.
 	display: inline-block;
 	margin: 0;
 	border: 0;
-	padding: 0.7% 2.8% 0.6% 2.8%;
+	padding: 0.4em 1.7em 0.4em 1.7em;
 	font-size: 0.9em;
 	cursor: pointer;
 }
