--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ body {
 	min-width: 574px;
 	font-family: LatoRegular;
     color: #6c6c6c;
-    font-size: 0.7em;
+    font-size: 1.5vw;
 	letter-spacing: 0.06em;
 	
 }
