--- a/css/contact.css
+++ b/css/contact.css
@@ -9,7 +9,7 @@ and open the template in the editor.
 */
 
 .contact-main {
-	padding: 2% 25% 3% 25%;
+	padding: 2em 13em 2em 13em;
 	text-align: center;
 }
 
@@ -20,8 +20,8 @@ and open the template in the editor.
 }
 
 .contact-main .headingspace {
-	width: 10%;
-    padding-top: 0.12%;
+	width: 4em;
+    padding-top: 0.1em;
     margin-left: auto;
     margin-right: auto;
     border-top: medium solid #585757;
