--- a/css/lunch_dinner.css
+++ b/css/lunch_dinner.css
@@ -149,7 +149,7 @@ and open the template in the editor.
 /* Main content css */ 
 
 .lunchdinner-main .lunch-intro {
-	padding: 2% 10% 3% 10%;
+	padding: 2em 7em 2em 7em;
 	text-align: center;
 }
 
@@ -165,8 +165,8 @@ and open the template in the editor.
 }
 
 .lunchdinner-main .headingspace {
-	width: 10%;
-    padding-top: 0.12%;
+	width: 5.5em;
+    padding-top: 0.1em;
     margin-left: auto;
     margin-right: auto;
     border-top: medium solid #585757;
@@ -175,7 +175,7 @@ and open the template in the editor.
 
 .lunchdinner-main .description {
 	font-size: 0.7em;
-	padding-top: 2%;
+	padding-top: 2em;
 }
 
 .lunchdinner-main .lunch-table-container {
@@ -188,7 +188,7 @@ and open the template in the editor.
 	right: 0;
 	bottom: 0;
 	left: 0;
-	padding: 6% 7% 4% 7%;
+	padding: 4em 5em 3em 5em;
 	text-align: center;
 }
 
@@ -221,7 +221,7 @@ and open the template in the editor.
 	vertical-align: top;
 	padding: 2%;
 	width: 20%;
-	margin: 0 2% 0 2%;
+	margin: 0 1.5em 0 1.5em;
 }
 
 .lunchdinner-main .food-icon {
@@ -230,7 +230,7 @@ and open the template in the editor.
 }
 
 .lunchdinner-main .stars {
-	margin-top: 5%;
+	margin-top: 1.5em;
 }
 
 .lunchdinner-main .star {
@@ -239,5 +239,5 @@ and open the template in the editor.
 }
 
 .lunchdinner-main .description-text {
-	margin-top: 5%;
+	margin-top: 1.5em;
 }
